--- a/.classpath
+++ b/.classpath
@@ -6,18 +6,18 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/flatlaf-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/flatlaf-extras-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/flatlaf-intellij-themes-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/glasspane-popup-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/jsvg-1.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/JTattoo-1.6.13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/miglayout-core.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/miglayout-swing.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/mysql-connector-j-8.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/mysql-connector-java-8.0.11.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/swing-datetime-picker-1.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/David/git/BranchMainProg3/Prog3_ProyectoFinal/proyecto-final/lib/timingframework-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/flatlaf-3.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/flatlaf-extras-3.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/flatlaf-intellij-themes-3.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/glasspane-popup-2.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jsvg-1.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/JTattoo-1.6.13.jar"/>
+	<classpathentry kind="lib" path="lib/miglayout-core.jar"/>
+	<classpathentry kind="lib" path="lib/miglayout-swing.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-j-8.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.11.jar"/>
+	<classpathentry kind="lib" path="lib/swing-datetime-picker-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/timingframework-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
