--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,7 @@
 	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.11.jar"/>
 	<classpathentry kind="lib" path="lib/swing-datetime-picker-1.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/timingframework-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/itextpdf-5.5.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
+	
 </classpath>
